# aha-common-utils

./: README.md  pyproject.toml
aha-common-utils/src/aha_common_utils/: config_loader.py  dependency_injector.py  log.py  logging.py  param_metadata.py
docs/: Mock与真实接口切换规范-埋点事件清单.md  PRD-AI答案机.md  PRD新增章节-心理机制增强.md  SEO实施规范-metadata-分享页-结构化数据清单.md  UIUX设计文档-AI答案机.md  logging.md  openapi-glimmer-v1-draft.yaml  postgresql_schema_glimmer.sql  tracing.md  前端工程实施步骤-Nextjs-基于UIUX与后端接口.md  前端技术选型方案-照见一念.md  前端研发执行总方案.md  后端技术方案与实施文档-照见一念.md  后端技术选型方案-照见一念.md  后端接口与数据结构设计-基于UIUX原型.md  团队新同学入场-快速开始.md  墨刀AI提示词文档-照见一念-Web优先多端.md  广告位配置与广告接入实施步骤.md  广告位配置与广告接入研发Checklist.md  广告商业化产品方案与页面规划.md  广告商业化接口契约草案.md  开发功能拆解-AI答案机.md  开发补充拆解-心理机制增强.md  心理机制-功能模块-指标对照表.md  数据库初始化操作文档.md  网关接入指南.md  讨论稿  配置字段说明文档.md
src/aha_common_utils/: __init__.py  command.py  config_base.py  config_file_parser.py  config_generator.py  config_loader.py  config_registry.py  config_store.py  dependency_injector.py  file.py  layered_settings.py  log.py  logging.py  param_metadata.py  path_utils.py  rdbms.py  register.py  settings.py  snowflake_id.py  tracing.py
src/aha_common_utils/cli/: __init__.py  _app.py  _params.py
src/aha_common_utils/settings/: __init__.py  _base.py  _constants.py  _discovery.py
tests/: test_config_store_env_precedence.py
